# ableton_push_clone_gui

./: .gitignore  .qmlls.ini  CMakeLists 2.txt  CMakeLists.txt  ClipGridModel.cpp  ClipGridModel.h  FREENOVE_DISPLAY.md  GUIA_RPi5.md  Main.qml  MixerModel.cpp  MixerModel.h  PushCloneTheme.qml  README_SETUP.md  SceneListModel.cpp  SceneListModel.h  SerialController.cpp  SerialController.h  SplashScreen.qml  TrackListModel.cpp  TrackListModel.h  UART_SETUP.md  check_rpi5_qt.sh  deploy_rpi.sh  deploy_rpi5.sh  main.cpp  qmldir  resources.qrc  setup_and_deploy_rpi5.sh  setup_rpi5.sh  typescript
.claude/: settings.local.json
components/: ClipPad.qml  MixChannelStrip.qml  NavigationBar.qml  TransportBar.qml
views/: MixView.qml  MixView.qml.backup  SessionView.qml
